# calculator-testing-ui

./: Dockerfile  pyproject.toml
.github/workflows/: python-app.yml
src/web/: calculator.py  elements.py
tests/: test_calculator.py
