[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculatorTester"
version = "1.0.0"
description = "Enterprise-grade automation framework for AI/ML and Cybersecurity"
readme = "README.md"
requires-python = ">=3.12, <3.13"
authors = [
    { name = "Nir", email = "your.email@example.com" }
]
dependencies = [
    "playwright==1.57.0",
    "pytest-playwright==0.7.2",
    "pytest-asyncio==1.3.0",
    "pytest==8.2.2",
    "pytest-xdist==3.8.0",
    "pydantic==2.12.5"
]

[project.optional-dependencies]
dev = [
    "black",     # Formatter
    "ruff",      # Fast Linter (replaces Flake8/Isort)
    "mypy",      # Static Type Checking
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--browser chromium --headed"
python_files = "test_*.py"
pythonpath = ["."]
markers = [
    "smoke: quick verification tests",
    "regression: full suite coverage",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"] # Error, Pyflakes, Isort

[tool.mypy]
python_version = "3.12"
strict = true
